--- a/app/globals.css
+++ b/app/globals.css
@@ -1020,8 +1020,9 @@ body {
 
 .nav-tile,
 .menu {
-    pointer-events: none;
+    pointer-events: all !important;
 }
+
 .nav-border-line {
     display: none;
 }
